[package]
name = "rust-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.9", features = ["derive"]}
ethers = "2.0"
eyre = "*"
hex = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path="src/simple_transactions.rs"


[[bin]]
name = "deploy"
path="src/contract_deploy.rs"